syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.room";
option java_outer_classname = "RoomProto";
option objc_class_prefix = "RO";

package room;

service RoomManager {
    rpc GetAllRooms (Empty) returns (AllRoomsReply){}
    rpc GetRoomById (RoomByIdRequest) returns (RoomByIdReply){}
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomReply){}
    rpc UpdateRoom (UpdateRoomRequest) returns (UpdateRoomReply){}
    rpc DeleteRoom (DeleteRoomRequest) returns (DeleteRoomReply){}
}

message Empty{}

message Room{
    string id = 1;
    string name = 2;
    string serverUrl = 3;
    string token = 4;
};

message AllRoomsReply{
    repeated Room rooms = 1;
    string page = 2;
    string size = 3;
}

message RoomByIdRequest{
    string id = 1;
}

message RoomByIdReply{
    Room room = 1;
}

message CreateRoomRequest{
    Room room = 1;
}

message CreateRoomReply{
    bool created = 1;
}

message UpdateRoomRequest{
    Room room = 1;
}

message UpdateRoomReply{
    bool updated = 1;
}

message DeleteRoomRequest{
    Room room = 1;
}

message DeleteRoomReply{
    bool deleted = 1;
}

